# gstreaming_mediamtx

./: .dockerignore  .gitignore  Dockerfile.cpp_whip  Dockerfile.rust_gstreamer  Makefile  README-MediaMTX-VP8.md  README-PITFALLS.md  README-WHIP-STABILITY.md  README.md  docker-compose.mediamtx.yml  mediamtx.yml
scripts/: publish-image-whip.js
whip-publish/: Cargo.toml
whip-publish-cpp/: CMakeLists.txt
whip-publish-cpp/src/: main.cpp
whip-publish/src/: main.rs
